[package]
name = "whoiam"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-sts = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.16-alpha", package = "aws-sdk-sts" }
tokio = { version = "1", features = ["full"] }
toml = "0.5.8"
home = "0.5.3"
serde = { version = "1.0.130", features = ["derive"] }

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true # link-time optimisation
panic = "abort" # abort on panic
